--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ services:
 
   backend:
     build: ./
+#    image: freshrojek/fastapi-test
     restart: always
     ports:
-      - 80:80
+      - "80:80"
+
+
